@@ -1,5 +1,9 @@
 2003-01-30  Dom Lachowicz <cinamod@hotmail.com>
 
+	* rsvg-paint-server.c (radial, linear): Handle objBbox coordinate space properly. Thanks Lauris for the tip!
+	
+2003-01-30  Dom Lachowicz <cinamod@hotmail.com>
+
 	* rsvg.c (rsvg_start_svg): s/TRUE/FALSE to fix scaling vbox issue
 	
 2003-01-29  Dom Lachowicz <cinamod@hotmail.com>
